@@ -1,3 +1,5 @@
+- Added support for "final ok" rules in mailrules plugin.
+
 -------------------------------------------------------------------------------
 Changes in version 2.15
 
